--- a/WHG/index.html
+++ b/WHG/index.html
@@ -17,9 +17,6 @@
 </head>
 
 <body>
-  <p> hi my name is Evan and this is my thing, I hope you enjoy </p>
-  <p> It is not very polished but I think it's pretty cool. I might add more features, like the ability to change the population size, the mutation rate and other stuff. If
-    I can be bothered. Let me know if you are interested, also probably more levels coming soon</p>
-  <div id = "canvas"></div>
+  <p> hi my name is Evan and this is my thing, I hope you enjoy. Use WASD controls for gameplay </p>
 </body>
 </html>
