--- a/WHG - level2/index.html
+++ b/WHG - level2/index.html
@@ -19,7 +19,7 @@
 
 <body>
   <p> hi my name is Evan and this is my thing, I hope you enjoy. Pro Tip: use WASD controls to move the player </p>
-  <p> The next level is up <a href="https://code-bullet.github.io/WorldsHardestGameAI/WHG%20-%20level3/">Next Level</a>
+  <p> The next level is up <a href="https://code-bullet.github.io/WorldsHardestGameAI/WHG%20-%20level3/">Next Level</a> </p>
   <div id = "canvas"></div>
 </body>
 </html>
