--- a/WHG/index.html
+++ b/WHG/index.html
@@ -18,5 +18,7 @@
 
 <body>
   <p> hi my name is Evan and this is my thing, I hope you enjoy. Use WASD controls for gameplay </p>
+  <p> The next level is up so check it out <a href="https://code-bullet.github.io/WorldsHardestGameAI/WHG%20-%20level3/">Next Level</a> </p>
+
 </body>
 </html>
