Implement a few useful tag.

--- a/WHG/index.html
+++ b/WHG/index.html
@@ -2,9 +2,14 @@
   ~ Copyright © 2018 CodeBullet
   -->
 
-<html>
+<html lang="en-US">
 <head>
   <meta charset="UTF-8">
+  <title>World's Hardest Game AI - Level 1</title>
+  <meta name="author" content="Code Bullet">
+  <meta name="keywords" content="HTML, AI, JavaScript, World's Hardest Game, Code Bullet">
+  <meta name="description" content="Code Bullet's AI for The World's Hardest Game first level.">
+
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" src="libraries/p5.dom.js"></script>
   <script language="javascript" src="libraries/p5.sound.js"></script>
