Remove deprecated 'language' parameter from <script>.

--- a/WHG - level2/index.html
+++ b/WHG - level2/index.html
@@ -10,19 +10,19 @@
   <meta name="keywords" content="HTML, AI, JavaScript, World's Hardest Game, Code Bullet">
   <meta name="description" content="Code Bullet's AI for The World's Hardest Game second level.">
 
-  <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
-  <script language="javascript" src="libraries/p5.dom.js"></script>
-  <script language="javascript" src="libraries/p5.sound.js"></script>
-  <script language="javascript" type="text/javascript" src="sketch.js"></script>
-  <script language="javascript" type="text/javascript" src="Tile.js"></script>
-  <script language="javascript" type="text/javascript" src="setting_level.js"></script>
-  <script language="javascript" type="text/javascript" src="Player.js"></script>
-  <script language="javascript" type="text/javascript" src="Solid.js"></script>
-  <script language="javascript" type="text/javascript" src="Dot.js"></script>
-  <script language="javascript" type="text/javascript" src="Population.js"></script>
-  <script language="javascript" type="text/javascript" src="Brain.js"></script>
-  <script language="javascript" type="text/javascript" src="Node.js"></script>
-  <script language="javascript" type="text/javascript" src="Coin.js"></script>
+  <script type="text/javascript" src="libraries/p5.js"></script>
+  <script src="libraries/p5.dom.js"></script>
+  <script src="libraries/p5.sound.js"></script>
+  <script type="text/javascript" src="sketch.js"></script>
+  <script type="text/javascript" src="Tile.js"></script>
+  <script type="text/javascript" src="setting_level.js"></script>
+  <script type="text/javascript" src="Player.js"></script>
+  <script type="text/javascript" src="Solid.js"></script>
+  <script type="text/javascript" src="Dot.js"></script>
+  <script type="text/javascript" src="Population.js"></script>
+  <script type="text/javascript" src="Brain.js"></script>
+  <script type="text/javascript" src="Node.js"></script>
+  <script type="text/javascript" src="Coin.js"></script>
 
 </head>
 
