Add 'type' parameter to <script>.

--- a/WHG - level3/index.html
+++ b/WHG - level3/index.html
@@ -11,8 +11,8 @@
   <meta name="description" content="Code Bullet's AI for The World's Hardest Game third level.">
 
   <script type="text/javascript" src="libraries/p5.js"></script>
-  <script src="libraries/p5.dom.js"></script>
-  <script src="libraries/p5.sound.js"></script>
+  <script type="text/javascript" src="libraries/p5.dom.js"></script>
+  <script type="text/javascript" src="libraries/p5.sound.js"></script>
   <script type="text/javascript" src="sketch.js"></script>
   <script type="text/javascript" src="Tile.js"></script>
   <script type="text/javascript" src="setting_level.js"></script>
