Format basically the file.

--- a/WHG/index.html
+++ b/WHG/index.html
@@ -4,30 +4,32 @@
 
 <html lang="en-US">
 <head>
-  <meta charset="UTF-8">
-  <title>World's Hardest Game AI - Level 1</title>
-  <meta name="author" content="Code Bullet">
-  <meta name="keywords" content="HTML, AI, JavaScript, World's Hardest Game, Code Bullet">
-  <meta name="description" content="Code Bullet's AI for The World's Hardest Game first level.">
+    <meta charset="UTF-8">
+    <title>World's Hardest Game AI - Level 1</title>
+    <meta name="author" content="Code Bullet">
+    <meta name="keywords" content="HTML, AI, JavaScript, World's Hardest Game, Code Bullet">
+    <meta name="description" content="Code Bullet's AI for The World's Hardest Game first level.">
 
-  <script type="text/javascript" src="libraries/p5.js"></script>
-  <script type="text/javascript" src="libraries/p5.dom.js"></script>
-  <script type="text/javascript" src="libraries/p5.sound.js"></script>
-  <script type="text/javascript" src="sketch.js"></script>
-  <script type="text/javascript" src="Tile.js"></script>
-  <script type="text/javascript" src="setting_level.js"></script>
-  <script type="text/javascript" src="Player.js"></script>
-  <script type="text/javascript" src="Solid.js"></script>
-  <script type="text/javascript" src="Dot.js"></script>
-  <script type="text/javascript" src="Population.js"></script>
-  <script type="text/javascript" src="Brain.js"></script>
-  <script type="text/javascript" src="Node.js"></script>
-
+    <script type="text/javascript" src="libraries/p5.js"></script>
+    <script type="text/javascript" src="libraries/p5.dom.js"></script>
+    <script type="text/javascript" src="libraries/p5.sound.js"></script>
+    <script type="text/javascript" src="sketch.js"></script>
+    <script type="text/javascript" src="Tile.js"></script>
+    <script type="text/javascript" src="setting_level.js"></script>
+    <script type="text/javascript" src="Player.js"></script>
+    <script type="text/javascript" src="Solid.js"></script>
+    <script type="text/javascript" src="Dot.js"></script>
+    <script type="text/javascript" src="Population.js"></script>
+    <script type="text/javascript" src="Brain.js"></script>
+    <script type="text/javascript" src="Node.js"></script>
 </head>
-
 <body>
-  <p> hi my name is Evan and this is my thing, I hope you enjoy. Use WASD controls for gameplay </p>
-  <p> The next level is up so check it out <a href="https://code-bullet.github.io/WorldsHardestGameAI/WHG%20-%20level2/">Next Level</a> </p>
-
+<br>
+<p> Hi, my name is Evan and this is my thing, I hope you enjoy. Use WASD controls for gameplay </p>
+<p> The next level is up so check it out:
+    <a href="https://code-bullet.github.io/WorldsHardestGameAI/WHG%20-%20level2/">Next Level</a>
+</p>
+<p>You can change some of the simulation values below.</p>
+<br>
 </body>
 </html>
