Add a CSS file.

--- a/WHG/index.html
+++ b/WHG/index.html
@@ -10,6 +10,8 @@
     <meta name="keywords" content="HTML, AI, JavaScript, World's Hardest Game, Code Bullet">
     <meta name="description" content="Code Bullet's AI for The World's Hardest Game first level.">
 
+    <link rel="stylesheet" type="text/css" href="../shared/style.css">
+
     <script type="text/javascript" src="libraries/p5.js"></script>
     <script type="text/javascript" src="libraries/p5.dom.js"></script>
     <script type="text/javascript" src="libraries/p5.sound.js"></script>
