--- a/WHG - level3/index.html
+++ b/WHG - level3/index.html
@@ -12,19 +12,19 @@
 
     <link rel="stylesheet" type="text/css" href="../shared/style.css">
 
-    <script type="text/javascript" src="libraries/p5.js"></script>
-    <script type="text/javascript" src="libraries/p5.dom.js"></script>
-    <script type="text/javascript" src="libraries/p5.sound.js"></script>
+    <script type="text/javascript" src="../shared/libraries/p5.js"></script>
+    <script type="text/javascript" src="../shared/libraries/p5.dom.js"></script>
+    <script type="text/javascript" src="../shared/libraries/p5.sound.js"></script>
     <script type="text/javascript" src="sketch.js"></script>
-    <script type="text/javascript" src="Tile.js"></script>
+    <script type="text/javascript" src="../shared/Tile.js"></script>
     <script type="text/javascript" src="setting_level.js"></script>
     <script type="text/javascript" src="Player.js"></script>
-    <script type="text/javascript" src="Solid.js"></script>
+    <script type="text/javascript" src="../shared/Solid.js"></script>
     <script type="text/javascript" src="Dot.js"></script>
-    <script type="text/javascript" src="Population.js"></script>
-    <script type="text/javascript" src="Brain.js"></script>
-    <script type="text/javascript" src="Node.js"></script>
-    <script type="text/javascript" src="Coin.js"></script>
+    <script type="text/javascript" src="../shared/Population.js"></script>
+    <script type="text/javascript" src="../shared/Brain.js"></script>
+    <script type="text/javascript" src="../shared/Node.js"></script>
+    <script type="text/javascript" src="../shared/Coin.js"></script>
 
 </head>
 <body>
